<resources>
    <string name="app_name">PantryPal</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="Click_to_register">Click to Register</string>
    <string name="Register">Register</string>
    <string name="Click_to_login">Click to Login</string>
    <string name="logout">logout</string>
    <string name="show_password">Show Password</string>
</resources>